# jarvis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app_config.py  basedpyrightconfig.json  build.ps1  build.sh  main.py  pyproject.toml  pyrightconfig.json  replace_stt.py  requirements.txt  setup.ps1  ui.py  web_ui.py
.fsc/: plan.md
actions/: browser.py  calendar.py  cron_web_ui.py  disk_predictor.py  file_guardian.py  health.py  location.py  media.py  network_anomaly.py  network_monitor.py  open_app.py  process_manager.py  process_timeline.py  reminders.py  screen_vision.py  service_monitor.py  shell.py  sys_info.py  system_cron.py  system_doctor.py  tts.py  weather.py  whatsapp.py  windows_utils.py  youtube_stats.py
assets/: thinking_phrases.json
audio/: __init__.py  microphone.py  noise_suppressor.py
config/: api_keys.example.json  audio.yaml  models.yaml  voices.yaml  wake_word.yaml
core/: __init__.py  audio_buffer.py  barge_in.py  emotion_tts.py  fahrettin_vad.py  gemini_provider.py  local_llm.py  multimodal.py  ollama_provider.py  orchestrator.py  proactive_voice.py  prompt.txt  provider_base.py  skill_manager.py  streaming_stt.py  streaming_tts.py  text_utils.py  thinking_aloud.py  tool_registry.py  vad_engine.py  voice_manager.py  wake_word.py
docs/: ARCHITECTURE.md  ASIMILASYON_RAPORU.md  ROADMAP.md  SIFIR_HATA_PLANI.md  SKILL_YUKLEME.md  TAM_ASIMILASYON_PLANI.md  TECHNOLOGIES.md  TESTING.md
memory/: calendar_events.json  calendar_events.json.example  conversation_transcript.py  cron.db  disk_history.db  memory_manager.py  (+4 more)
(+67 files in other folders)
